# update-migrate-rust

./: Cargo.toml
basic-updates/base/: Cargo.toml
basic-updates/update/: Cargo.toml
