[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace.metadata.near.reproducible_build]
build_environment = "docker.io/sourcescan/cargo-near:0.6.0@sha256:bf488476d9c4e49e36862bbdef2c595f88d34a295fd551cc65dc291553849471"


[workspace]
members = [
    "basic-updates/base",
    "basic-updates/update",
    "enum-updates/base",
    "enum-updates/update",
    "self-updates/base",
    "self-updates/update",
]
