[package]
name = "base"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[package.metadata.near.reproducible_build]
build_environment = "docker.io/sourcescan/cargo-near:0.6.0@sha256:bf488476d9c4e49e36862bbdef2c595f88d34a295fd551cc65dc291553849471"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
